--- a/requester/pom.xml
+++ b/requester/pom.xml
@@ -12,7 +12,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>org.feuyeux.rsocket</groupId>
+            <groupId>org.feuyeux.rsocket-security</groupId>
             <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
