--- a/pom.xml
+++ b/pom.xml
@@ -23,5 +23,6 @@
         <netty.version>4.1.45.Final</netty.version>
         <reactor-core.version>3.3.3.RELEASE</reactor-core.version>
         <fastjson.version>1.2.68</fastjson.version>
+        <jjwt.version>0.9.1</jjwt.version>
     </properties>
 </project>
