--- a/requester/pom.xml
+++ b/requester/pom.xml
@@ -15,6 +15,12 @@
             <groupId>org.feuyeux.rsocket-security</groupId>
             <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.fasterxml.jackson.core</groupId>
+                    <artifactId>jackson-databind</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
