--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,7 @@
          xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
-c
+    <groupId>org.feuyeux.rsocket-security</groupId>
     <artifactId>hello-rsocket-java</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <packaging>pom</packaging>
